
Changelog
=========

2019.1.0 (unreleased)
---------------------

- ResolveOGUIDView: Preserve query string. [lgraf]
- Bump docxcompose to 1.0.0a16 to fix updating docproperties. [deiferni]
- Remove deprecated docprops from templates and tests. [njohner]
- Bump ftw.structlog to get new client_ip field and referrer logging fixes. [lgraf]
- Skip sablon template validation during setup of development system. [njohner]
- Include portal_type in @favorites endpoint response. [lgraf]
- Supply date format locale settings for fr-ch. [lgraf]
- Add meeting error view displayed when user has permission issues. [njohner]
- Kill the theme functional test layer. [Rotonen]
- Kill the theme integration test layer. [Rotonen]
- Merge the plonetheme.teamraum gever profile into opengever.core. [Rotonen]
- Merge the plonetheme.teamraum default profile into opengever.core. [Rotonen]
- Merge the plonetheme.teamraum bumblebee profile to opengever.core. [Rotonen]
- Set the default publisher encoding to UTF-8 to match production in tests. [Rotonen]
- Bump ftw.testbrowser to 1.30.0 to respect content encodings in tests. [Rotonen]
- Use the correct message factory in the Oneoffixx form. [Rotonen]
- Add choice fields as possible first form elements for the autofocus seek. [Rotonen]
- Bump ftw.pdfgenerator to version 1.6.3. [njohner]
- Fix an improper super call in meeting activities. [Rotonen]
- Move meeting activity actor_link fetching to meeting activity helpers. [Rotonen]
- Fix flaky loading of document preview with tooltip. [Kevin Bieri]
- Remove unused get_conversion_status view. [njohner]
- Correctly update containing_dossier and containing_subdossier indexes. [njohner]
- Also show participants with expired membership in meeting participants-tab. [njohner]
- Change remaining "zurücksenden" to "ablegen". [njohner]
- Also expand teams, like groups, on keyword widgets. [Rotonen]
- Translate z3c.formwidget.query (nothing). [njohner]